Fixed wrapping for recent thread links

--- a/css/main.less
+++ b/css/main.less
@@ -374,6 +374,7 @@ html {
             display: block;
             overflow: hidden;
             text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
 }
